--- a/src/data/levels/05a_CPU/12_Addressing modes (1-2)/chat/es.yml
+++ b/src/data/levels/05a_CPU/12_Addressing modes (1-2)/chat/es.yml
@@ -36,7 +36,7 @@ relative:
   messages:
   - 💡  recuerda que toma un "desplazamiento" (un byte con signo)
   - los bytes con signo pueden ser complicados de entender para los humanos
-  - usan la notación "Two's component", que está explicada brevemente en 📄  ~/lib/byte.js~
+  - usan la notación "Two's complement", que está explicada brevemente en 📄  ~/lib/byte.js~
   - por ejemplo, si el desplazamiento es ~-3~, recibirías un 253
   - puedes convertir ese 253 en ~-3~ usando el método `toS8`
   - 💡  además, para detectar si se cruza de página, vas a necesitar `highByteOf(...)`
