--- a/src/data/levels/✨_Let's play/01_Spacegulls/chat/en.yml
+++ b/src/data/levels/✨_Let's play/01_Spacegulls/chat/en.yml
@@ -49,7 +49,7 @@ play:
   - yeah
   - here's the game
   - you can play using either your ⌨️  keyboard or a 🎮  gamepad
-  - place your mouse cursor over the ⌨️  icon on the <top-right> corner so learn the keyboard controls
+  - place your mouse cursor over the ⌨️  icon on the <top-right> corner to learn the keyboard controls
   - 💾  your progress will be <saved> when you leave this level
   - I'll be here, watching 👀
   events:
