--- a/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
+++ b/src/data/levels/01_Getting started/03_Architecture/chat/en.yml
@@ -4,7 +4,7 @@ main:
     set((m) => m.chat.winOnEnd = true);
     {{Right}}.load("architecture.png");
   messages:
-  - so... this thing has 3 main components that work pretty much independently from each other
+  - so... this thing has 3 main components that work pretty much independently of each other
   - "these are: 🧠  CPU, 🖥️  PPU, and 🔊  APU"
   - "in order to play games, you must connect two pieces of hardware:"
   - 💾  a cartridge (the game itself!)
