--- a/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
+++ b/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
@@ -21,7 +21,7 @@ golden:
   - a log file that documents the result of running that test ROM, but created by an emulator that was proven to work correctly ✅
   - "it has -in order-: the [PC], the bytecode, the decompiled assembly, the state of all registers (`P` is the Flags Register), and the cycle counter"
   - so far, I only ran basic tests to your code
-  - this will go through all type of corner cases, verifying that your CPU is solid
+  - this will go through all types of corner cases, verifying that your CPU is solid
   - if you find discrepancies, you'll have to figure out the cause or ask for help online
   - use the ⏩  button and reach the end of the golden log!
   run-after-messages: |
