--- a/src/data/levels/06_Console/06_Full control/chat/en.yml
+++ b/src/data/levels/06_Console/06_Full control/chat/en.yml
@@ -106,7 +106,7 @@ tests:
 
 credits:
   comment: |-
-    // HACK: Using monospace numbers (𝟶 𝟷 𝟸 𝟹 𝟺 𝟻 𝟼 𝟽 𝟾 𝟿) to workaround a dictionary bug
+    // HACK: Using monospace numbers (𝟶 𝟷 𝟸 𝟹 𝟺 𝟻 𝟼 𝟽 𝟾 𝟿) to work around a dictionary bug
     // tied to src/gui/components/modals/CreditsModal.jsx
     // tied to src/data/levels/06_Console/06_Full control/chat/*.yml
     // tied to src/data/levels/06_Console/06_Full control/meta.yml
@@ -169,7 +169,7 @@ credits:
   - "{10}🔑  **Licenses**:"
   - "{10}  💿 💻  **Code** is licensed under The MIT License"
   - |+
-    {10}  📖 ✏️  **Levels** are licensed under is licensed under CC BY-NC 𝟺.𝟶
+    {10}  📖 ✏️  **Levels** are licensed under CC BY-NC 𝟺.𝟶
   - |+
     {10}this game uses <third-party> assets and software, check licenses.txt
   - if you enjoyed this, please consider supporting my work 💜
