Fixing errors in the first chapters

--- a/src/data/levels/01_Getting started/02_Quick tutorial/chat/en.yml
+++ b/src/data/levels/01_Getting started/02_Quick tutorial/chat/en.yml
@@ -29,7 +29,7 @@ otherapps:
 
 tv:
   messages:
-  - that's the TV
+  - that's the <TV>
   - it'll be of great help for opening multimedia files
   - or running our emulator 👀
   responses:
