--- a/src/data/levels/01_Getting started/02_Quick tutorial/chat/es.yml
+++ b/src/data/levels/01_Getting started/02_Quick tutorial/chat/es.yml
@@ -29,7 +29,7 @@ otherapps:
 
 tv:
   messages:
-  - esa es la TV
+  - esa es la <TV>
   - va a ser de gran ayuda para abrir archivos multimedia
   - o correr nuestro emulador 👀
   responses:
