--- a/src/data/levels/02_Assembly/09_Stack/chat/en.yml
+++ b/src/data/levels/02_Assembly/09_Stack/chat/en.yml
@@ -7,7 +7,7 @@ main:
       m.$canEdit = false;
     });
   messages:
-  - the stack 🧱  is a LIFO structure ("Last In, First Out") which programs can use to store values
+  - the stack 🧱  is a <LIFO> structure ("Last In, First Out") which programs can use to store values
   - the current stack depth is measured by the "Stack Pointer" ([SP])
   - in a 6502 processor, it lives in memory between $0100 and $01FF 🐏
   - "[SP] is initially $FF, which points to the last stack byte ($01FF)"
