--- a/src/data/levels/02_Assembly/09_Stack/chat/es.yml
+++ b/src/data/levels/02_Assembly/09_Stack/chat/es.yml
@@ -7,7 +7,7 @@ main:
       m.$canEdit = false;
     });
   messages:
-  - la pila 🧱  es una estructura LIFO ("Last In, First Out") que los programas usan para almacenar valores
+  - la pila 🧱  es una estructura <LIFO> ("Last In, First Out") que los programas usan para almacenar valores
   - la longitud actual de la pila es medida por el "Stack Pointer" ([SP])
   - en un procesador 6502, vive en la memoria entre $0100 y $01FF 🐏
   - "[SP] inicialmente es $FF, que apunta al último byte de la pila ($01FF)"
