FIX: Moving corollary to a more useful place

--- a/src/data/levels/03_Cartridge/03_The magic constant/chat/en.yml
+++ b/src/data/levels/03_Cartridge/03_The magic constant/chat/en.yml
@@ -55,3 +55,10 @@ errors:
       ```javascript throw new Error(\"a message\");```
   responses:
   - ...exercise
+
+corollary:
+  messages:
+  - from now on, you can see your changes with the `diff` command
+  - if you need to undo your changes, run the `restore` command
+  responses:
+  - ▶️  continue [end]
