--- a/src/data/levels/03_Cartridge/03_The magic constant/chat/es.yml
+++ b/src/data/levels/03_Cartridge/03_The magic constant/chat/es.yml
@@ -55,3 +55,10 @@ errors:
       ```javascript throw new Error(\"un mensaje\");```
   responses:
   - ...exercise
+
+corollary:
+  messages:
+  - a partir de ahora, puedes ver tus cambios con el comando `diff`
+  - si necesitas deshacer tus cambios, ejecuta el comando `restore`
+  responses:
+  - ▶️  continuar [end]
