--- a/src/data/levels/04_Bus/03_Controller/chat/en.yml
+++ b/src/data/levels/04_Bus/03_Controller/chat/en.yml
@@ -55,5 +55,6 @@ done:
   - ✅  done!
   - <! 🎮  Controller integrated.
   - now, the 🎮  icon in the emulator will glow ✨
+  - and you'll be able to press <A> and <Right> at the same time 😅
   responses:
   - ▶️  continue [end]
