--- a/src/data/levels/04_Bus/03_Controller/chat/es.yml
+++ b/src/data/levels/04_Bus/03_Controller/chat/es.yml
@@ -54,5 +54,6 @@ done:
   - ✅  ¡listo!
   - <! 🎮  Mando integrado.
   - ahora, el ícono 🎮  en el emulador brillará ✨
+  - y podrás presionar <A> y <Derecha> al mismo tiempo 😅
   responses:
   - ▶️  continuar [end]
