FIX: weird escapes

--- a/src/data/levels/03_Cartridge/03_The magic constant/chat/en.yml
+++ b/src/data/levels/03_Cartridge/03_The magic constant/chat/en.yml
@@ -52,7 +52,7 @@ errors:
   messages:
   - |-
     to throw errors, use:
-      ```javascript throw new Error(\"a message\");```
+      ```javascript throw new Error("a message");```
   responses:
   - ...exercise
 
