--- a/src/data/levels/03_Cartridge/03_The magic constant/chat/es.yml
+++ b/src/data/levels/03_Cartridge/03_The magic constant/chat/es.yml
@@ -52,7 +52,7 @@ errors:
   messages:
   - |-
     para tirar errores, usa:
-      ```javascript throw new Error(\"un mensaje\");```
+      ```javascript throw new Error("un mensaje");```
   responses:
   - ...exercise
 
