Presenting /lib/byte.js in the main path - Fixes #15

--- a/src/data/levels/03_Cartridge/04_Reading the header/chat/en.yml
+++ b/src/data/levels/03_Cartridge/04_Reading the header/chat/en.yml
@@ -79,16 +79,16 @@ exercise:
       mirroringId: "VERTICAL", // (obtain this from <Flags 6>)
       mapperId: 4 // (obtain this from <Flags 6> and <Flags 7>)
     }```
+  - if you don't know how to operate with bits, you can use my library 📖
+  - it's in 📄  ~/lib/byte.js~, just import it as another module and use it
   responses:
   - (*) I need a bit of help 📐 [bits]
 
 bits:
   messages:
-  - if you don't know how to operate with bits, you can use my library 📖
-  - it's in 📄  ~/lib/byte.js~, just import it as another module and use it
   - the methods you'd want to use are `getFlag(...)`, `highNybbleOf(...)`, `lowNybbleOf(...)`, and `buildU8(...)`
   responses:
-  - how can I use the module? [import]
+  - how can I use the library module? [import]
 
 import:
   messages:
