Making Unit button behavior easier to understand

--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
@@ -15,7 +15,7 @@ works:
   - it fails in almost every aspect
   - tons of <bugs>
   - it's like the author was drunk or something 🙃 🔫
-  - I guess that's why they named it BrokenNEEES
+  - at least they were honest and named it BrokenNEEES
   - you can try it anyway...
   - 💡  drag a ROM into the TV or use one of the games in 📁  ~/roms~
   - (if you don't have any, go back and play the <👾 > chapter!)
