--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/es.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/es.yml
@@ -15,7 +15,7 @@ works:
   - falla en casi todos los aspectos
   - montones de <errores>
   - es como si el autor hubiera estado borracho o algo así 🙃 🔫
-  - supongo que por eso lo llamaron BrokenNEEES
+  - al menos fueron honestos y lo llamaron BrokenNEEES
   - puedes probarlo de todos modos...
   - 💡  arrastra una ROM a la TV o usa uno de los juegos en 📁  ~/roms~
   - (si no tienes ninguno, ¡ve hacia atrás y juega el capítulo <👾 >!)
