--- a/src/data/levels/02_Assembly/10_Subroutines/chat/en.yml
+++ b/src/data/levels/02_Assembly/10_Subroutines/chat/en.yml
@@ -22,9 +22,10 @@ where:
 
 label:
   messages:
-  - the assembler I found doesn't support that 😔
-  - but I'm sure that's possible with other assemblers
-  - and `JSR @init` would generate the same machine code as `JSR $4029`
+  - that's an option too!
+  - but you need to tell the assembler where the code starts
+  - using a directive like `.org $4020`
+  - in that case, `JSR @init` would generate the same machine code as `JSR $4029`
   responses:
   - ...where
 
